updated package json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "design",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://priyanka20032003.github.io/realEstate_react",
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
@@ -14,8 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "homepage": "https://Priyanka20032003.github.io/realEstate_react"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
